# ez-rsplitter

./: CMakeLists.txt  FindTesseract.cmake  main.cpp
libs/: calculator.cpp  calculator.h  partition.cpp  partition.h  receipt.cpp  receipt.h
